WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104321
Crash in JSC::Bindings::RootObject::globalObject() sync'ing notes in Evernote
https://bugs.webkit.org/show_bug.cgi?id=104321
Summary
Crash in JSC::Bindings::RootObject::globalObject() sync'ing notes in Evernote
Geoffrey Garen
Reported
2012-12-06 17:00:48 PST
Crash in JSC::Bindings::RootObject::globalObject() sync'ing notes in Evernote
Attachments
Patch
(1.80 KB, patch)
2012-12-06 17:07 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.70 KB, patch)
2012-12-07 13:59 PST
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-12-06 17:07:59 PST
Created
attachment 178114
[details]
Patch
Geoffrey Garen
Comment 2
2012-12-07 13:59:34 PST
Created
attachment 178269
[details]
Patch
Geoffrey Garen
Comment 3
2012-12-07 14:34:52 PST
Committed
r136986
: <
http://trac.webkit.org/changeset/136986
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug