Crash in JSC::Bindings::RootObject::globalObject() sync'ing notes in Evernote https://bugs.webkit.org/show_bug.cgi?id=104321 <rdar://problem/12770497>

Reviewed by Sam Weinig.

../JavaScriptCore:

Work around a JSValueUnprotect(NULL) in Evernote.

* API/JSValueRef.cpp:
(evernoteHackNeeded):
(JSValueUnprotect):

../WebCore:

Missed a null check.

* bindings/objc/WebScriptObject.mm:
(-[WebScriptObject JSObject]): If our root object has been cleared, don't
try to dereference it. This happens in Evernote during tear-down.

This matches the behavior of other methods in the same class.

(_isSafeScript returns false if the root object has been cleared.)

If we believe _isSafeScript is a good idea, it's probably the right test
to use here (as opposed to just null-checking _rootObject) because this API
gives the client unlimited access to the underlying JavaScript object.


Canonical link: https://commits.webkit.org/122560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136986 268f45cc-cd09-0410-ab3c-d52691b4dbfc